SEO: static meta tags, Open Graph, structured data in index.html

--- a/catering-app/index.html
+++ b/catering-app/index.html
@@ -2,10 +2,76 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/logo-red.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Red Carpet Catering</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Primary SEO -->
+    <title>Red Carpet Catering — Premium Catering in Cebu</title>
+    <meta name="description" content="Premium catering services in Cebu for weddings, birthdays, corporate events, and all occasions. Filipino, Asian & International cuisines. Book online or order food for delivery." />
+    <meta name="keywords" content="catering Cebu, Red Carpet Catering, Cebu catering services, wedding catering Cebu, birthday catering, corporate catering, food delivery Cebu, Filipino catering" />
+    <meta name="author" content="Red Carpet Food and Catering Services" />
+    <meta name="theme-color" content="#b91c1c" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ceburedcarpetcatering.com/" />
+    <meta property="og:title" content="Red Carpet Catering — Premium Catering in Cebu" />
+    <meta property="og:description" content="Premium catering services in Cebu for weddings, birthdays, corporate events, and all occasions. Book online or order food for delivery." />
+    <meta property="og:image" content="https://ceburedcarpetcatering.com/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Red Carpet Catering" />
+    <meta property="og:locale" content="en_PH" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Red Carpet Catering — Premium Catering in Cebu" />
+    <meta name="twitter:description" content="Premium catering services in Cebu for weddings, birthdays, corporate events, and all occasions." />
+    <meta name="twitter:image" content="https://ceburedcarpetcatering.com/og-image.jpg" />
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://ceburedcarpetcatering.com/" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CateringBusiness",
+      "name": "Red Carpet Food and Catering Services",
+      "description": "Premium catering services in Cebu for weddings, birthdays, corporate events, and all special occasions.",
+      "url": "https://ceburedcarpetcatering.com",
+      "logo": "https://ceburedcarpetcatering.com/logo-red.png",
+      "image": "https://ceburedcarpetcatering.com/og-image.jpg",
+      "telephone": ["+639171876510", "+639266642839", "+63323834122"],
+      "email": "bookings@ceburedcarpetcatering.com",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Cebu City",
+        "addressRegion": "Cebu",
+        "addressCountry": "PH"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 10.3157,
+        "longitude": 123.8854
+      },
+      "areaServed": {
+        "@type": "City",
+        "name": "Cebu"
+      },
+      "openingHours": "Mo-Su 08:00-20:00",
+      "priceRange": "₱₱",
+      "servesCuisine": ["Filipino", "Asian", "International"],
+      "sameAs": [
+        "https://www.facebook.com/ceburedcarpetcatering",
+        "https://www.instagram.com/ceburedcarpet"
+      ],
+      "hasMenu": {
+        "@type": "Menu",
+        "url": "https://ceburedcarpetcatering.com/menu"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
